# basilisk

./: .env.example  .gitignore  BASILISK_BUILD_PLAN.txt  Dockerfile  README.md  pyproject.toml  task.md
.github/workflows/: pylint.yml  security-scan.yml
basilisk/: __init__.py  __main__.py  adaptive.py  api_enum.py  ast_analysis.py  attack.py  auth.py  behavioral_analysis.py  browser.py  cli.py  compliance.py  concurrent.py  config.py  core.py  dependency_check.py  dependency_graph.py  differential_test.py  encoding.py  engine.py  exploit_poc.py  generator.py  grammar.py  graphql_advanced.py  http.py  judge.py  kubernetes_scan.py  llm.py  memory_fuzz.py  mobile_scan.py  models.py  mutation.py  openapi_tests.py  osint.py  parser.py  passive.py  recon.py  remediation.py  report_gen.py  reporter.py  scoring.py  (+5 more)
basilisk-backend/: .env.example  DEPLOY.md  alembic.ini  auth.py  database.py  docker-compose.yml  main.py  models.py  requirements.txt  schemas.py
basilisk-backend/alembic/: env.py
basilisk-backend/tests/: conftest.py  test_api.py  test_auth.py
basilisk-frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
basilisk-frontend/src/: App.tsx  index.css
basilisk/datasets/: __init__.py  cmdi.json  lfi.json  nosqli.json  open_redirect.json  path_traversal.json  sqli.json  ssrf.json  ssti.json  xss.json
basilisk/detectors/: __init__.py  auth_bypass.py  bola.py  (+22 more)
tests/: test_config.py  test_datasets.py  test_dependency_graph.py  test_generator.py  test_http.py  test_judge.py  test_models.py  test_openapi_tests.py  test_passive.py
(+17 files in other folders)
