[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basilisk"
version = "0.1.0"
description = "Web vulnerability scanner CLI - crawl, passive audit, active fuzz"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
basilisk = "basilisk.cli:main"

[tool.setuptools.packages.find]
include = ["basilisk*"]
