[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basilisk"
version = "2.0.0"
description = "Web vulnerability scanner CLI - HackAgent-style pipeline for live apps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "pyfiglet>=1.0.2",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
ml = ["scikit-learn>=1.3", "numpy>=1.24"]
waf = ["requests[socks]>=2.31"]
all = ["basilisk[llm,ml,waf]"]

[project.scripts]
basilisk = "basilisk.cli:main"

[tool.setuptools.packages.find]
include = ["basilisk*"]

[tool.setuptools.package-data]
basilisk = ["datasets/*.json"]
